resolved an issue where the search button on mobile would change sizes during resize.

--- a/sass/layouts/responsive-sidebars.scss
+++ b/sass/layouts/responsive-sidebars.scss
@@ -102,7 +102,7 @@ $zen-auto-include-item-base: false;
       position: relative;
       z-index: 20;
       background-color:rgb(75, 104, 156);  
-      width:14.5%;  
+      width:2.75em;  
       top:0%;
     }
     #search {
@@ -163,6 +163,7 @@ $zen-auto-include-item-base: false;
 
     #site-name { /* The name of the website */
       display:block; //college name is shown as part of image on banner
+      width:80%; //Prevents the name from sliding under the mobile nav at 360px wide
       a:link,
         a:visited {
           color: #ffffff;
